--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,24 +1,28 @@
 body {
     font-family: 'Roboto', sans-serif;
+    background-image: url('../images/5302920.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
 }
+
+/* HEADER*/
 
 .header .header-container {
     display: flex;
-    justify-content: center;
     justify-content: space-between;
     border-bottom: 2px solid #cd0000;
-    background-color: black;
+    background-color: var(--color-default);
     padding: 20px;
 }
 
 .header .header-container h1 a {
-    color: var(--text-color-menu);
+    color: var(--highlight-color-one);
     transition: color 0.3s;
     letter-spacing: 1px;
 }
 
 .header .header-container h1 a:hover {
-    color: #ff7f50;
+    color: var(--highlight-color-two);
 }
 
 .header .header-container nav ul {
@@ -28,11 +32,11 @@ body {
 .header .header-container nav ul li {
     justify-content: space-between;
     padding: 10px 30px;
-    color: var(--text-color-menu);
+    color: var(--highlight-color-one);
 }
 
 .header .header-container nav ul li a {
-    color: var(--text-color-menu);
+    color: var(--highlight-color-one);
     position: relative;
 }
 
@@ -43,7 +47,7 @@ body {
     bottom: 0;
     width: 0;
     height: 2px;
-    background-color: #ff7f50;
+    background-color: var(--highlight-color-two);
     transition: width 0.3s ease, left 0.3s ease;
     transform: translateX(-50%);
 }
@@ -53,12 +57,7 @@ body {
     left: 50%;
 }
 
-body {
-    background-image: url('../images/5302920.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
+/* ABOUT */
 main .about {
     display: flex;
     margin: 50px;
@@ -78,7 +77,7 @@ main .about {
 }
 
 .about .info .author-name {
-    color: #cccccc;
+    color: var(--titles-color);
     letter-spacing: 1px;
     font-size: 40px;
     font-weight: 600;
@@ -89,14 +88,13 @@ main .about {
 }
 
 .about .info .author-description {
-    color: #e0e0e0;
+    color: var(--descriptions-color);
     padding: 10px 0;
     letter-spacing: 2px;
-    font-size: 10px;
     font-weight: 400;
     transition: 0.4s ease;
     cursor: default;
-    background-color: rgba(255, 255, 255, 0.05);
+    background-color: var(--background-color-highlight);
     border-radius: 10px;
     font-size: 16px;
     padding: 10px;
@@ -107,54 +105,36 @@ main .about {
     display: none;
 }
 
-.more-about-author {
+.more-about-author, .hide-info {
     margin-top: 10px;
     border: none;
     border-radius: 10px;
     cursor: pointer;
     width: 150px;
     height: 25px;
-    background-color: rgba(255, 255, 255, 0.05);
-    color: #cccccc;
+    background-color: var(--background-color-highlight);
+    color: var(--titles-color);
     font-weight: bold;
     transition: 0.3s ease-in-out;
 }
 
-.more-about-author:hover{
-    background-color: #ff7f50;
-    color: #000;
+.more-about-author:hover, .hide-info:hover {
+    background-color: var(--highlight-color-two);
+    color: var(--color-default);
     font-weight: bold;
     font-size: 15px;
     padding: 2px 0;
 }
 
-.hide-info {
-    margin-top: 10px;
-    border: none;
-    border-radius: 10px;
-    cursor: pointer;
-    width: 150px;
-    height: 25px;
-    background-color: rgba(255, 255, 255, 0.05);
-    color: #cccccc;
-    font-weight: bold;
-    transition: 0.3s ease-in-out;
-}
+/*SLIDERS*/
 
-.hide-info:hover{
-    background-color: #ff7f50;
-    color: #000;
-    font-weight: bold;
-    font-size: 15px;
-    padding: 2px 0;
-}
-
-/*Slider*/
-
-.projects-section {
+.sections-name {
     text-align: center;
     font-size: 45px;
     padding: 20px;
+}
+
+.projects-section {
     cursor: default;
     background: linear-gradient(270deg, #00BFFF, #FF5E00, #00BFFF);
     background-size: 300% 300%;
@@ -163,108 +143,77 @@ main .about {
     animation: animarGradiente 5s ease infinite;
 }
 
-@keyframes animarGradiente {
-    0% {
-        background-position: 0% 50%;
-    }
-
-    50% {
-        background-position: 100% 50%;
-    }
-
-    100% {
-        background-position: 0% 50%;
-    }
-}
-
 .projects {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.project-one, .project-two, .project-three, .project-four {
+.project {
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 10px;
 }
 
-.slider-one-image, .slider-two-image, .slider-three-image, .slider-four-image {
+.project-image-container {
     margin-left: 4%;
 }
-.project-one-image, .project-two-image, .project-three-image, .project-four-image {
+.project-image {
     margin-top: 50px;
     width: 500px;
     height: 300px;
     border-radius: 10px;
     margin-left: 4%;
-    border: 10px double rgba(255, 255, 255, 0.05);
+    border: 10px double var(--background-color-highlight);
 }
 
-.project-one-info, .project-two-info, .project-three-info, .project-four-info {
+.project-info {
     display: flex;
     flex-direction: column;
     margin-left: 4%;
 }
 
-.project-one-info .project-one-name, 
-.project-two-info .project-two-name,
-.project-three-info .project-three-name,
-.project-four-info .project-four-name {
-    color: #cccccc;
+.project-info .project-name {
+    color: var(--titles-color);
     font-weight: 600;
     font-size: 25px;
     letter-spacing: 1px;
     cursor: default;
 }
 
-.project-one-info .project-one-descrip,
-.project-two-info .project-two-descrip,
-.project-three-info .project-three-descrip,
-.project-four-info .project-four-descrip {
+.project-info .project-description {
     margin-top: 5px;
-    color: #e0e0e0;
+    color: var(--descriptions-color);
     font-weight: 500;
     font-size: 14px;
     padding: 0 5px;
     cursor: default;
 }
 
-.project-one-info .project-one-icons,
-.project-two-info .project-two-icons,
-.project-three-info .project-three-icons,
-.project-four-info .project-four-icons {
+.project-info .project-icons {
     display: flex;
     justify-content: center;
     margin: 10px 0;
     font-size: 70px;
     gap: 10px;
+    color: var(--color-default);
 }
 
-.project-one-info .project-one-icons li:hover,
-.project-two-info .project-two-icons li:hover,
-.project-three-info .project-three-icons li:hover,
-.project-four-info .project-four-icons li:hover{
-    color: orangered;
+.project-info .project-icons li:hover {
+    color: var(--color-icons-highlight);
 }
 
-.project-one-link, 
-.project-two-link,
-.project-three-link,
-.project-four-link {
+.project-link {
     text-align: center;
     font-size: 20px;
     margin-top: 10px;
-    color: #00BFFF;
+    color: var(--highlight-color-one);
     letter-spacing: 1px;
 }
 
-.project-one-link:hover,
-.project-two-link:hover,
-.project-three-link:hover,
-.project-four-link:hover {
-    color: #ff7f50;
+.project-link:hover {
+    color: var(--highlight-color-two);
     cursor: pointer;
     font-size: 30px;
     font-weight: 600;
@@ -277,7 +226,7 @@ main .about {
 }
 
 .fa-arrow-alt-circle-left:hover{
-    color: orangered;
+    color: var(--color-icons-highlight);
 }
 
 .fa-arrow-alt-circle-right {
@@ -287,7 +236,7 @@ main .about {
 }
 
 .fa-arrow-alt-circle-right:hover{
-    color: orangered;
+    color: var(--color-icons-highlight);
 }
 
 .visible {
@@ -303,32 +252,15 @@ main .about {
     cursor: default;
 }
 
-/*Skills*/
+/*SKILLS*/
 
 .skills-section {
-    text-align: center;
-    font-size: 45px;
-    padding: 20px;
     cursor: default;
     background: linear-gradient(270deg, #00BFFF, #FF5E00, #00BFFF);
     background-size: 300% 300%;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     animation: animarGradiente 5s ease infinite;
-}
-
-@keyframes animarGradiente {
-    0% {
-        background-position: 0% 50%;
-    }
-
-    50% {
-        background-position: 100% 50%;
-    }
-
-    100% {
-        background-position: 0% 50%;
-    }
 }
 
 .skills-icons {
@@ -344,17 +276,14 @@ main .about {
 }
 
 .skills-icons li:hover {
-    color: orangered;
+    color: var(--color-icons-highlight);
     transform: scale(1.2);
-    text-shadow: 0 6px 12px rgba(255, 127, 80, 0.7);
+    text-shadow: 0 6px 12px var(--highlight-color-two);
 }
 
-/*Contact*/
+/*CONTACT*/
 
 .contact-section {
-   text-align: center;
-    font-size: 45px;
-    padding: 20px;
     cursor: default;
     background: linear-gradient(270deg, #00BFFF, #FF5E00, #00BFFF);
     background-size: 300% 300%;
@@ -363,26 +292,12 @@ main .about {
     animation: animarGradiente 5s ease infinite;
 }
 
-@keyframes animarGradiente {
-    0% {
-        background-position: 0% 50%;
-    }
-
-    50% {
-        background-position: 100% 50%;
-    }
-
-    100% {
-        background-position: 0% 50%;
-    }
-}
-
 .contact-message {
     text-align: center;
     font-size: 18px;
     margin-top: 10px;
     font-weight: 500;
-    color: #e0e0e0;
+    color: var(--descriptions-color);
 }
 
 .form {
@@ -399,7 +314,7 @@ main .about {
     width: 330px;
     height: 35px;
     padding: 10px;
-    background-color: #cccccc;
+    background-color: var(--titles-color);
     margin: 10px 0;
 }
 
@@ -408,12 +323,12 @@ main .about {
     border: none;
     padding: 10px;
     margin: 10px 0;
-    background-color: #cccccc;
+    background-color: var(--titles-color);
 }
 
 .input-name::placeholder, .input-email::placeholder, 
 .textarea::placeholder {
-    color: #000;
+    color: var(--color-default);
     font-weight: 600;
 }
 
@@ -422,28 +337,26 @@ main .about {
     border: none;
     width: 200px;
     height: 35px;
-    color: #000;
-    background-color: #cccccc;
+    color: var(--color-default);
+    background-color: var(--titles-color);
     font-weight: 600;
     cursor: pointer;
 }
 
 .btn:hover {
-    background-color: #e0e0e0;
+    background-color: var(--descriptions-color);
 }
 
-/*Footer*/
+/*FOOTER*/
 
 .footer {
-    /* background-color: #e0e0e0; */
     margin: 10px 30px;
     border-radius: 10px;
 }
 
 .footer-title {
     margin: 50px 0 0 30px;
-    /* text-align: center; */
-    color: #cccccc;
+    color: var(--titles-color);
     cursor: default;
     padding: 10px;
 }
@@ -457,9 +370,25 @@ main .about {
 }
 
 .links .link a{
-    color: #e0e0e0;
+    color: var(--descriptions-color);
 }
 
 .links .link:hover{
     transform: scale(1.2);
+}
+
+/* KEYFRAMES ANIMATION*/
+
+@keyframes animarGradiente {
+    0% {
+        background-position: 0% 50%;
+    }
+
+    50% {
+        background-position: 100% 50%;
+    }
+
+    100% {
+        background-position: 0% 50%;
+    }
 }
